--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: go-api
-  namespace: app/handler
+  namespace: app
   description: Go todo-api 
   tags:
     - go
@@ -12,4 +12,4 @@ spec:
   lifecycle: dev
   owner: gogo-team
   providesApis:
-    - projects
+    - app/handler/projects
